<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.LogActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/label_new_entry"
            android:textColor="@color/textHeader"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_date"
                    android:inputType="date" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_time"
                    android:inputType="time" />

            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:id="@+id/time_of_day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_am" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_pm" />
            </RadioGroup>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_from_site"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/from_site"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_from" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_to_site"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/to_site"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_to" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_reason"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_purpose"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_odometer_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/odometer_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_odometer_start"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_odometer_end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/odometer_end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_odometer_end"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
